# inesdata-mov-data-generation

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  Readme.md  config.yaml  config_dev.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: merge_request_template.md
.github/workflows/: publish-doc.yaml
.gitlab/merge_request_templates/: merge_request_template.md
docs/: index.md
docs/notebooks/: aemet_qa.ipynb  aemet_qa_vanessa.ipynb  emt_qa.ipynb  informo_qa.ipynb
docs/notebooks/aux/: creacion_emt_dataset.ipynb  sprint_20240429.ipynb
docs/notebooks/eda/: aemet_eda copy.ipynb  aemet_eda.ipynb  emt_eda.ipynb  informo_eda.ipynb
docs/qa/: aemet_report.html  emt_report.html  informo_report.html
inesdata_mov_datasets/: __init__.py  __main__.py  settings.py  utils.py
inesdata_mov_datasets/handlers/: logger.py
inesdata_mov_datasets/sources/aemet/create/: create.py
inesdata_mov_datasets/sources/aemet/extract/: extract.py
inesdata_mov_datasets/sources/create/: aemet.py  emt.py  informo.py
inesdata_mov_datasets/sources/emt/: create.py  extract.py
inesdata_mov_datasets/sources/emt/calendar/: create.py
inesdata_mov_datasets/sources/emt/create/: create.py
inesdata_mov_datasets/sources/emt/create/calendar/: create.py
inesdata_mov_datasets/sources/emt/create/eta/: create.py
inesdata_mov_datasets/sources/emt/create/line_detail/: create.py
inesdata_mov_datasets/sources/emt/eta/: create.py
inesdata_mov_datasets/sources/emt/extract/: extract.py
inesdata_mov_datasets/sources/emt/extract/calendar/: extract.py
inesdata_mov_datasets/sources/emt/extract/eta/: extract.py
inesdata_mov_datasets/sources/emt/extract/line_detail/: extract.py
inesdata_mov_datasets/sources/emt/line_detail/: create.py
inesdata_mov_datasets/sources/extract/: aemet.py  emt.py  informo.py
inesdata_mov_datasets/sources/extract_filtered/: aemet.py  emt.py  emt_sync.py  informo.py
inesdata_mov_datasets/sources/filter_data/: aemet.py  emt.py  informo.py
inesdata_mov_datasets/sources/informo/create/: create.py
inesdata_mov_datasets/sources/informo/extract/: extract.py
notebooks/: emt_qa.ipynb
notebooks/aemet_qa/: index.html
notebooks/aux/creacion_emt_dataset/: index.html
notebooks/aux/sprint_20240429/: index.html
notebooks/eda/aemet_eda/: index.html
notebooks/eda/emt_eda/: index.html
notebooks/eda/informo_eda/: index.html
notebooks/emt_qa/: index.html
notebooks/informo_qa/: index.html
notebooks/qa_reports/: emt_report.html
requirements/: requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  requirements_doc.in  requirements_doc.txt  requirements_ipynb.in  requirements_ipynb.txt
test/: test_app.py  test_create_aemet.py  test_create_emt.py  test_create_informo.py  test_download_aemet.py  test_extract_aemet.py  test_extract_emt.py  test_extract_informo.py  test_settings.py  test_utils.py
