[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "inesdata-mov"
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
description = "inesdata-mov"
authors = [{ name = "" }]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
repository = "https://dev-git.labs.gmv.com/gmv-bda/upm/inesdata-mov/inesdata-mov.git"

[tool.setuptools.dynamic]
version = { attr = "inesdata_mov.__version__" }
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.packages.find]
include = ["inesdata_mov", "inesdata_mov.*"]
namespaces = false

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"
addopts = "-v"
testpaths = ["tests", "integration"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
profile = "black"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | sonar-project.properties
)/
'''

[tool.ruff]
select = ["E", "F"]
line-length = 99
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
ignore = [
  "E501", # Line too long, handled by black
]
ignore-init-module-imports = true

[tool.ruff.mccabe]
max-complexity = 10

[tool.pydocstyle]
convention = "google"
add-ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
]
